@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2020, RTE (http://www.rte-france.com)
+/*
+ * Copyright (c) 2020-2025, RTE (http://www.rte-france.com)
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
@@ -13,6 +13,8 @@ import com.powsybl.action.LoadActionBuilder;
 import com.powsybl.action.TerminalsConnectionAction;
 import com.powsybl.commons.PowsyblException;
 import com.powsybl.commons.report.ReportNode;
+import com.powsybl.commons.test.PowsyblTestReportResourceBundle;
+import com.powsybl.commons.test.TestUtil;
 import com.powsybl.contingency.*;
 import com.powsybl.ieeecdf.converter.IeeeCdfNetworkFactory;
 import com.powsybl.iidm.criteria.AtLeastOneNominalVoltageCriterion;
@@ -21,6 +23,7 @@ import com.powsybl.iidm.criteria.VoltageInterval;
 import com.powsybl.iidm.criteria.duration.IntervalTemporaryDurationCriterion;
 import com.powsybl.iidm.network.*;
 import com.powsybl.iidm.network.extensions.HvdcAngleDroopActivePowerControlAdder;
+import com.powsybl.iidm.network.extensions.LoadDetail;
 import com.powsybl.iidm.network.extensions.LoadDetailAdder;
 import com.powsybl.iidm.network.extensions.StandbyAutomatonAdder;
 import com.powsybl.iidm.network.test.EurostagTutorialExample1Factory;
@@ -37,9 +40,13 @@ import com.powsybl.openloadflow.ac.solver.NewtonRaphsonStoppingCriteriaType;
 import com.powsybl.openloadflow.lf.outerloop.OuterLoopResult;
 import com.powsybl.openloadflow.lf.outerloop.OuterLoopStatus;
 import com.powsybl.openloadflow.network.*;
+import com.powsybl.openloadflow.network.impl.LfNetworkList;
+import com.powsybl.openloadflow.network.impl.Networks;
 import com.powsybl.openloadflow.network.impl.OlfBranchResult;
 import com.powsybl.openloadflow.network.impl.OlfThreeWindingsTransformerResult;
+import com.powsybl.openloadflow.sa.extensions.ContingencyLoadFlowParameters;
 import com.powsybl.openloadflow.util.LoadFlowAssert;
+import com.powsybl.openloadflow.util.report.PowsyblOpenLoadFlowReportResourceBundle;
 import com.powsybl.security.*;
 import com.powsybl.security.condition.TrueCondition;
 import com.powsybl.security.limitreduction.LimitReduction;
@@ -52,6 +59,7 @@ import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.Mockito;
 
 import java.io.IOException;
+import java.io.StringWriter;
 import java.util.*;
 import java.util.concurrent.CompletionException;
 import java.util.stream.Collectors;
@@ -80,6 +88,8 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
                 .collect(Collectors.toList());
         contingencies.add(new Contingency("LD", new LoadContingency("LD")));
 
+        contingencies.add(new Contingency("BBS2", new BusbarSectionContingency("BBS2")));
+
         StateMonitor stateMonitor = new StateMonitor(ContingencyContext.all(), Collections.emptySet(),
                 network.getVoltageLevelStream().map(Identifiable::getId).collect(Collectors.toSet()), Collections.emptySet());
 
@@ -87,13 +97,18 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
 
         assertSame(LoadFlowResult.ComponentResult.Status.CONVERGED, result.getPreContingencyResult().getStatus());
         assertEquals(0, result.getPreContingencyResult().getLimitViolationsResult().getLimitViolations().size());
-        assertEquals(3, result.getPostContingencyResults().size());
+        assertEquals(4, result.getPostContingencyResults().size());
         assertSame(PostContingencyComputationStatus.CONVERGED, result.getPostContingencyResults().get(0).getStatus());
         assertEquals(2, result.getPostContingencyResults().get(0).getLimitViolationsResult().getLimitViolations().size());
+        assertEquals(0, result.getPostContingencyResults().get(0).getConnectivityResult().getDisconnectedLoadActivePower());
         assertSame(PostContingencyComputationStatus.CONVERGED, result.getPostContingencyResults().get(1).getStatus());
         assertEquals(2, result.getPostContingencyResults().get(1).getLimitViolationsResult().getLimitViolations().size());
+        assertEquals(0, result.getPostContingencyResults().get(1).getConnectivityResult().getDisconnectedLoadActivePower());
         PostContingencyResult postContingencyResult = getPostContingencyResult(result, "LD");
+        assertEquals(600, postContingencyResult.getConnectivityResult().getDisconnectedLoadActivePower());
         assertEquals(398.0, postContingencyResult.getNetworkResult().getBusResult("BBS2").getV(), LoadFlowAssert.DELTA_V);
+
+        assertEquals(603.77, getPostContingencyResult(result, "BBS2").getConnectivityResult().getDisconnectedGenerationActivePower());
     }
 
     @Test
@@ -149,6 +164,11 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         LimitViolation lowViolation = limitViolations1.get(2);
         assertEquals(LimitViolationType.LOW_VOLTAGE, lowViolation.getLimitType());
         assertEquals(370, lowViolation.getLimit());
+
+        Optional<ViolationLocation> vl1ViolationLocation = lowViolation.getViolationLocation();
+        assertTrue(vl1ViolationLocation.isPresent());
+        assertEquals(ViolationLocation.Type.NODE_BREAKER, vl1ViolationLocation.get().getType());
+        assertEquals(List.of(0, 1, 2, 3), ((NodeBreakerViolationLocation) vl1ViolationLocation.get()).getNodes());
     }
 
     @Test
@@ -173,12 +193,22 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         assertEquals(0, result.getPostContingencyResults().get(0).getLimitViolationsResult().getLimitViolations().size());
         assertSame(PostContingencyComputationStatus.CONVERGED, result.getPostContingencyResults().get(1).getStatus());
         assertEquals(0, result.getPostContingencyResults().get(1).getLimitViolationsResult().getLimitViolations().size());
+
+        Optional<ViolationLocation> vl1ViolationLocation = result.getPreContingencyResult().getLimitViolationsResult().getLimitViolations().get(0).getViolationLocation();
+        assertTrue(vl1ViolationLocation.isPresent());
+        assertEquals(ViolationLocation.Type.NODE_BREAKER, vl1ViolationLocation.get().getType());
+        assertEquals(List.of(0, 5), ((NodeBreakerViolationLocation) vl1ViolationLocation.get()).getNodes());
+
+        Optional<ViolationLocation> vl1ViolationLocation2 = result.getPreContingencyResult().getLimitViolationsResult().getLimitViolations().get(1).getViolationLocation();
+        assertTrue(vl1ViolationLocation2.isPresent());
+        assertEquals(ViolationLocation.Type.NODE_BREAKER, vl1ViolationLocation2.get().getType());
+        assertEquals(List.of(1, 3, 4), ((NodeBreakerViolationLocation) vl1ViolationLocation2.get()).getNodes());
     }
 
     @Test
     void testActivePowerLimitViolations() {
         Network network = createNodeBreakerNetwork();
-        network.getLine("L1").newActivePowerLimits1()
+        network.getLine("L1").getOrCreateSelectedOperationalLimitsGroup1().newActivePowerLimits()
                .setPermanentLimit(1.0)
                .beginTemporaryLimit()
                .setName("60")
@@ -219,7 +249,7 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
     @Test
     void testApparentPowerLimitViolations() {
         Network network = createNodeBreakerNetwork();
-        network.getLine("L1").newApparentPowerLimits1()
+        network.getLine("L1").getOrCreateSelectedOperationalLimitsGroup1().newApparentPowerLimits()
                .setPermanentLimit(1.0)
                .beginTemporaryLimit()
                .setName("60")
@@ -309,7 +339,7 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
 
         SecurityAnalysisResult result = runSecurityAnalysis(network, contingencies, lfParameters);
 
-        assertSame(PostContingencyComputationStatus.CONVERGED, result.getPostContingencyResults().get(0).getStatus());
+        assertSame(PostContingencyComputationStatus.FAILED, result.getPostContingencyResults().get(0).getStatus());
     }
 
     @Test
@@ -475,11 +505,6 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
     @Test
     void testSaWithStateMonitorLfLeg() {
         Network network = T3wtFactory.create();
-        List<Contingency> contingencies = network.getBranchStream()
-                .limit(1)
-                .map(b -> new Contingency(b.getId(), new BranchContingency(b.getId())))
-                .collect(Collectors.toList());
-
         SecurityAnalysisParameters parameters = new SecurityAnalysisParameters();
         parameters.setLoadFlowParameters(new LoadFlowParameters());
         parameters.addExtension(OpenSecurityAnalysisParameters.class, new OpenSecurityAnalysisParameters().setCreateResultExtension(true));
@@ -522,11 +547,11 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
 
         List<Contingency> contingencies = createAllBranchesContingencies(fourBusNetwork);
 
-        fourBusNetwork.getLine("l14").newActivePowerLimits1().setPermanentLimit(0.1).add();
-        fourBusNetwork.getLine("l12").newActivePowerLimits1().setPermanentLimit(0.2).add();
-        fourBusNetwork.getLine("l23").newActivePowerLimits1().setPermanentLimit(0.25).add();
-        fourBusNetwork.getLine("l34").newActivePowerLimits1().setPermanentLimit(0.15).add();
-        fourBusNetwork.getLine("l13").newActivePowerLimits1().setPermanentLimit(0.1).add();
+        fourBusNetwork.getLine("l14").getOrCreateSelectedOperationalLimitsGroup1().newActivePowerLimits().setPermanentLimit(0.1).add();
+        fourBusNetwork.getLine("l12").getOrCreateSelectedOperationalLimitsGroup1().newActivePowerLimits().setPermanentLimit(0.2).add();
+        fourBusNetwork.getLine("l23").getOrCreateSelectedOperationalLimitsGroup1().newActivePowerLimits().setPermanentLimit(0.25).add();
+        fourBusNetwork.getLine("l34").getOrCreateSelectedOperationalLimitsGroup1().newActivePowerLimits().setPermanentLimit(0.15).add();
+        fourBusNetwork.getLine("l13").getOrCreateSelectedOperationalLimitsGroup1().newActivePowerLimits().setPermanentLimit(0.1).add();
 
         List<StateMonitor> monitors = List.of(new StateMonitor(ContingencyContext.all(), Set.of("l14", "l12", "l23", "l34", "l13"), Collections.emptySet(), Collections.emptySet()));
 
@@ -618,11 +643,11 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
 
         List<Contingency> contingencies = createAllBranchesContingencies(fourBusNetwork);
 
-        fourBusNetwork.getLine("l14").newActivePowerLimits1().setPermanentLimit(0.1).add();
-        fourBusNetwork.getLine("l12").newActivePowerLimits1().setPermanentLimit(0.2).add();
-        fourBusNetwork.getLine("l23").newActivePowerLimits1().setPermanentLimit(0.25).add();
-        fourBusNetwork.getLine("l34").newActivePowerLimits1().setPermanentLimit(0.15).add();
-        fourBusNetwork.getLine("l13").newActivePowerLimits1().setPermanentLimit(0.1).add();
+        fourBusNetwork.getLine("l14").getOrCreateSelectedOperationalLimitsGroup1().newActivePowerLimits().setPermanentLimit(0.1).add();
+        fourBusNetwork.getLine("l12").getOrCreateSelectedOperationalLimitsGroup1().newActivePowerLimits().setPermanentLimit(0.2).add();
+        fourBusNetwork.getLine("l23").getOrCreateSelectedOperationalLimitsGroup1().newActivePowerLimits().setPermanentLimit(0.25).add();
+        fourBusNetwork.getLine("l34").getOrCreateSelectedOperationalLimitsGroup1().newActivePowerLimits().setPermanentLimit(0.15).add();
+        fourBusNetwork.getLine("l13").getOrCreateSelectedOperationalLimitsGroup1().newActivePowerLimits().setPermanentLimit(0.1).add();
 
         List<StateMonitor> monitors = List.of(new StateMonitor(ContingencyContext.all(), Set.of("l14", "l12", "l23", "l34", "l13"), Collections.emptySet(), Collections.emptySet()));
 
@@ -730,6 +755,9 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         saParameters.addExtension(OpenSecurityAnalysisParameters.class, new OpenSecurityAnalysisParameters()
                 .setCreateResultExtension(true));
 
+        OpenLoadFlowParameters.create(saParameters.getLoadFlowParameters())
+                .setTransformerVoltageControlMode(OpenLoadFlowParameters.TransformerVoltageControlMode.WITH_GENERATOR_VOLTAGE_CONTROL);
+
         List<Contingency> contingencies = createAllBranchesContingencies(network);
 
         List<StateMonitor> monitors = createAllBranchesMonitors(network);
@@ -771,7 +799,7 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
 
         // pre-contingency tests
         PreContingencyResult preContingencyResult = result.getPreContingencyResult();
-        assertEquals(-6.181, preContingencyResult.getNetworkResult().getBranchResult("LINE_12").getQ2(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(-6.177, preContingencyResult.getNetworkResult().getBranchResult("LINE_12").getQ2(), LoadFlowAssert.DELTA_POWER);
 
         // post-contingency tests
         PostContingencyResult postContingencyResult = getPostContingencyResult(result, "N-2");
@@ -1202,7 +1230,7 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
     @Test
     void testPostContingencyFiltering() {
         Network network = EurostagFactory.fix(EurostagTutorialExample1Factory.createWithFixedCurrentLimits());
-        network.getLine("NHV1_NHV2_2").newCurrentLimits1()
+        network.getLine("NHV1_NHV2_2").getOrCreateSelectedOperationalLimitsGroup1().newCurrentLimits()
                 .setPermanentLimit(300)
                 .add();
         network.getVoltageLevel("VLHV1").setLowVoltageLimit(410);
@@ -1223,12 +1251,12 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         assertEquals(1008.928, postContingencyLimitViolationsOnLine.get(0).getValue(), LoadFlowAssert.DELTA_I);
 
         List<LimitViolation> preContingencyLimitViolationsOnVoltageLevel = result.getPreContingencyResult().getLimitViolationsResult()
-                .getLimitViolations().stream().filter(violation -> violation.getSubjectId().equals("VLHV1")).collect(Collectors.toList());
+                .getLimitViolations().stream().filter(violation -> violation.getSubjectId().equals("VLHV1")).toList();
         assertEquals(LimitViolationType.LOW_VOLTAGE, preContingencyLimitViolationsOnVoltageLevel.get(0).getLimitType());
         assertEquals(402.143, preContingencyLimitViolationsOnVoltageLevel.get(0).getValue(), LoadFlowAssert.DELTA_V);
 
         List<LimitViolation> postContingencyLimitViolationsOnVoltageLevel = result.getPostContingencyResults().get(0).getLimitViolationsResult()
-                .getLimitViolations().stream().filter(violation -> violation.getSubjectId().equals("VLHV1")).collect(Collectors.toList());
+                .getLimitViolations().stream().filter(violation -> violation.getSubjectId().equals("VLHV1")).toList();
         assertEquals(LimitViolationType.LOW_VOLTAGE, postContingencyLimitViolationsOnVoltageLevel.get(0).getLimitType());
         assertEquals(398.265, postContingencyLimitViolationsOnVoltageLevel.get(0).getValue(), LoadFlowAssert.DELTA_V);
 
@@ -1242,7 +1270,7 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         assertEquals(0, postContingencyLimitViolationsOnLine2.size());
 
         List<LimitViolation> postContingencyLimitViolationsOnVoltageLevel2 = result2.getPostContingencyResults().get(0).getLimitViolationsResult()
-                .getLimitViolations().stream().filter(violation -> violation.getSubjectId().equals("VLHV1")).collect(Collectors.toList());
+                .getLimitViolations().stream().filter(violation -> violation.getSubjectId().equals("VLHV1")).toList();
         assertEquals(0, postContingencyLimitViolationsOnVoltageLevel2.size());
     }
 
@@ -1275,7 +1303,7 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
     @Test
     void testViolationOnThreeWindingsTransformersLeg() {
         Network network = T3wtFactory.create();
-        network.getThreeWindingsTransformer("3wt").getLeg2().newCurrentLimits()
+        network.getThreeWindingsTransformer("3wt").getLeg2().getOrCreateSelectedOperationalLimitsGroup().newCurrentLimits()
                 .setPermanentLimit(400.)
                 .beginTemporaryLimit()
                 .setName("60'")
@@ -1400,6 +1428,66 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
 
         PostContingencyResult g1ContingencyResult2 = getPostContingencyResult(result, "g1");
         assertEquals(-2.783, g1ContingencyResult2.getNetworkResult().getBranchResult("l25").getP1(), LoadFlowAssert.DELTA_POWER);
+    }
+
+    @Test
+    void testHvdcAcEmulationWarmStart() {
+        Network n = HvdcNetworkFactory.createHvdcACEmulationWithHighImpedanceLines();
+        LoadFlowParameters params = new LoadFlowParameters();
+        params.setHvdcAcEmulation(true);
+        params.addExtension(OpenLoadFlowParameters.class,
+                new OpenLoadFlowParameters()
+                        .setSlackDistributionFailureBehavior(OpenLoadFlowParameters.SlackDistributionFailureBehavior.FAIL));
+        LoadFlowResult r = runLoadFlow(n, params);
+        assertTrue(r.isFullyConverged());
+        assertActivePowerEquals(0.0126, n.getLine("l12").getTerminal1());
+        assertActivePowerEquals(628.146, n.getLine("l12big").getTerminal1());
+        assertActivePowerEquals(606.357, n.getLine("l34").getTerminal1());
+        assertActivePowerEquals(193.642, n.getLine("l14").getTerminal1());
+
+        n.getLine("l12big").disconnect();
+
+        ReportNode report = ReportNode.newRootReportNode().withMessageTemplate("test").build();
+
+        // Run - N-K mode: previous values and start with frozen HVDC
+        params.getExtension(OpenLoadFlowParameters.class).setStartWithFrozenACEmulation(true);
+        params.setVoltageInitMode(LoadFlowParameters.VoltageInitMode.PREVIOUS_VALUES);
+
+        r = loadFlowRunner.run(n, n.getVariantManager().getWorkingVariantId(), computationManager, params, report);
+        assertFalse(r.isFullyConverged());
+        assertEquals(LoadFlowResult.ComponentResult.Status.MAX_ITERATION_REACHED, r.getComponentResults().get(0).getStatus());
+        assertReportContains("Freezing HVDC hvdc23 at previous active setPoint 620\\.15[0-9]* MW at station cs2.", report);
+        n.getLineStream().forEach(l -> {
+            System.out.println(l.getId() + " " + l.getTerminal1().getP() + " MW " + l.getTerminal2().getP() + " MW");
+        });
+
+        // The same network would converge with a DC init
+        params.setVoltageInitMode(LoadFlowParameters.VoltageInitMode.UNIFORM_VALUES);
+        params.getExtension(OpenLoadFlowParameters.class).setStartWithFrozenACEmulation(false);
+        params.getExtension(OpenLoadFlowParameters.class).setVoltageInitModeOverride(OpenLoadFlowParameters.VoltageInitModeOverride.NONE);
+        r = runLoadFlow(n, params);
+        assertTrue(r.isFullyConverged());
+        assertActivePowerEquals(71.821, n.getLine("l12").getTerminal1());
+        assertActivePowerEquals(62.422, n.getLine("l34").getTerminal1());
+        assertActivePowerEquals(737.577, n.getLine("l14").getTerminal1());
+
+        // Now test in Security Analysis
+        n = HvdcNetworkFactory.createHvdcACEmulationWithHighImpedanceLines();
+        report = ReportNode.newRootReportNode().withMessageTemplate("test").build();
+        Contingency c = new Contingency("l12big", new LineContingency("l12big"));
+
+        SecurityAnalysisParameters asParams = new SecurityAnalysisParameters();
+        asParams.setLoadFlowParameters(params);
+        SecurityAnalysisResult result = runSecurityAnalysis(n, List.of(c), Collections.emptyList(), asParams, report);
+        assertEquals(LoadFlowResult.ComponentResult.Status.CONVERGED, result.getPreContingencyResult().getStatus());
+        assertEquals(PostContingencyComputationStatus.MAX_ITERATION_REACHED, result.getPostContingencyResults().get(0).getStatus());
+        assertReportContains("Freezing HVDC hvdc23 at previous active setPoint 620.1584837694868 MW at station cs2.", report);
+
+        // Test in security analysis with warm start off
+        asParams.addExtension(OpenSecurityAnalysisParameters.class, new OpenSecurityAnalysisParameters().setStartWithFrozenACEmulation(false));
+        result = runSecurityAnalysis(n, List.of(c), Collections.emptyList(), asParams, report);
+        assertEquals(LoadFlowResult.ComponentResult.Status.CONVERGED, result.getPreContingencyResult().getStatus());
+        assertEquals(PostContingencyComputationStatus.CONVERGED, result.getPostContingencyResults().get(0).getStatus());
     }
 
     @Test
@@ -1620,11 +1708,11 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
 
         List<Contingency> contingencies = createAllBranchesContingencies(network);
 
-        network.getLine("l14").newCurrentLimits1().setPermanentLimit(60.0).add();
-        network.getLine("l12").newCurrentLimits1().setPermanentLimit(120.0).add();
-        network.getLine("l23").newCurrentLimits2().setPermanentLimit(150.0).add();
-        network.getLine("l34").newCurrentLimits1().setPermanentLimit(90.0).add();
-        network.getLine("l13").newCurrentLimits2().setPermanentLimit(60.0).add();
+        network.getLine("l14").getOrCreateSelectedOperationalLimitsGroup1().newCurrentLimits().setPermanentLimit(60.0).add();
+        network.getLine("l12").getOrCreateSelectedOperationalLimitsGroup1().newCurrentLimits().setPermanentLimit(120.0).add();
+        network.getLine("l23").getOrCreateSelectedOperationalLimitsGroup2().newCurrentLimits().setPermanentLimit(150.0).add();
+        network.getLine("l34").getOrCreateSelectedOperationalLimitsGroup1().newCurrentLimits().setPermanentLimit(90.0).add();
+        network.getLine("l13").getOrCreateSelectedOperationalLimitsGroup2().newCurrentLimits().setPermanentLimit(60.0).add();
 
         List<StateMonitor> monitors = List.of(new StateMonitor(ContingencyContext.all(), Set.of("l14", "l12", "l23", "l34", "l13"), Collections.emptySet(), Collections.emptySet()));
 
@@ -1673,19 +1761,19 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
 
         List<Contingency> contingencies = createAllBranchesContingencies(network);
 
-        network.getLine("l14").newCurrentLimits1().setPermanentLimit(60.0)
+        network.getLine("l14").getOrCreateSelectedOperationalLimitsGroup1().newCurrentLimits().setPermanentLimit(60.0)
                 .beginTemporaryLimit().setName("60").setAcceptableDuration(Integer.MAX_VALUE).setValue(200.0).endTemporaryLimit()
                 .beginTemporaryLimit().setName("0").setAcceptableDuration(60).setValue(Double.MAX_VALUE).endTemporaryLimit().add();
-        network.getLine("l12").newCurrentLimits1().setPermanentLimit(120.0)
+        network.getLine("l12").getOrCreateSelectedOperationalLimitsGroup1().newCurrentLimits().setPermanentLimit(120.0)
                 .beginTemporaryLimit().setName("60").setAcceptableDuration(Integer.MAX_VALUE).setValue(300.0).endTemporaryLimit()
                 .beginTemporaryLimit().setName("0").setAcceptableDuration(60).setValue(Double.MAX_VALUE).endTemporaryLimit().add();
-        network.getLine("l23").newCurrentLimits2().setPermanentLimit(150.0)
+        network.getLine("l23").getOrCreateSelectedOperationalLimitsGroup2().newCurrentLimits().setPermanentLimit(150.0)
                 .beginTemporaryLimit().setName("60").setAcceptableDuration(Integer.MAX_VALUE).setValue(500.0).endTemporaryLimit()
                 .beginTemporaryLimit().setName("0").setAcceptableDuration(60).setValue(Double.MAX_VALUE).endTemporaryLimit().add();
-        network.getLine("l34").newCurrentLimits1().setPermanentLimit(90.0)
+        network.getLine("l34").getOrCreateSelectedOperationalLimitsGroup1().newCurrentLimits().setPermanentLimit(90.0)
                 .beginTemporaryLimit().setName("60").setAcceptableDuration(Integer.MAX_VALUE).setValue(300.0).endTemporaryLimit()
                 .beginTemporaryLimit().setName("0").setAcceptableDuration(60).setValue(Double.MAX_VALUE).endTemporaryLimit().add();
-        network.getLine("l13").newCurrentLimits2().setPermanentLimit(60.0)
+        network.getLine("l13").getOrCreateSelectedOperationalLimitsGroup2().newCurrentLimits().setPermanentLimit(60.0)
                 .beginTemporaryLimit().setName("60").setAcceptableDuration(Integer.MAX_VALUE).setValue(300.0).endTemporaryLimit()
                 .beginTemporaryLimit().setName("0").setAcceptableDuration(60).setValue(Double.MAX_VALUE).endTemporaryLimit().add();
 
@@ -1752,7 +1840,8 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         List<Contingency> contingencies = createAllBranchesContingencies(network);
 
         ReportNode reportNode = ReportNode.newRootReportNode()
-                .withMessageTemplate("TestSecurityAnalysis", "Test security analysis report")
+                .withResourceBundles(PowsyblOpenLoadFlowReportResourceBundle.BASE_NAME, PowsyblTestReportResourceBundle.TEST_BASE_NAME)
+                .withMessageTemplate("TestSecurityAnalysis")
                 .build();
 
         LoadFlowParameters loadFlowParameters = new LoadFlowParameters();
@@ -1919,6 +2008,44 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         PostContingencyResult postContingencyResult = result.getPostContingencyResults().get(0);
         assertSame(PostContingencyComputationStatus.CONVERGED, postContingencyResult.getStatus());
         assertEquals(2, postContingencyResult.getConnectivityResult().getCreatedSynchronousComponentCount());
+    }
+
+    @Test
+    void testDcFastModeInFirstSlackComponentOnly() {
+        Network network = ConnectedComponentNetworkFactory.createThreeCcLinkedByASingleBus();
+        List<StateMonitor> monitors = createAllBranchesMonitors(network);
+        List<Contingency> contingencies = List.of(new Contingency("line", new BranchContingency("l34"), new BranchContingency("l45")));
+        SecurityAnalysisParameters parameters = new SecurityAnalysisParameters();
+
+        // Run fast DC security analysis
+        parameters.getLoadFlowParameters().setDc(true);
+        OpenLoadFlowParameters openLoadFlowParameters = OpenLoadFlowParameters.create(parameters.getLoadFlowParameters())
+                .setSlackBusSelectionMode(SlackBusSelectionMode.NAME);
+        OpenSecurityAnalysisParameters openSecurityAnalysisParameters = new OpenSecurityAnalysisParameters();
+        openSecurityAnalysisParameters.setDcFastMode(true);
+        parameters.addExtension(OpenSecurityAnalysisParameters.class, openSecurityAnalysisParameters);
+
+        List<List<String>> slackBusesIdList = List.of(List.of("b3_vl"), List.of("b3_vl", "b7_vl"), List.of("b3_vl", "b7_vl", "b10_vl"));
+        // verify that for each list of slacks buses, fast dc sa runs only in component of first slack bus
+        slackBusesIdList.forEach(slackBusesId -> {
+            openLoadFlowParameters.setSlackBusesIds(slackBusesId)
+                    .setMaxSlackBusCount(slackBusesId.size());
+            SecurityAnalysisResult result = runSecurityAnalysis(network, contingencies, monitors, parameters, ReportNode.NO_OP);
+            PostContingencyResult postContingencyResult = result.getPostContingencyResults().get(0);
+            assertSame(PostContingencyComputationStatus.CONVERGED, postContingencyResult.getStatus());
+
+            // verify only flows in slack component have been computed
+            assertEquals(3, postContingencyResult.getNetworkResult().getBranchResults().size());
+
+            // verify flows on the branches
+            assertEquals(-1, postContingencyResult.getNetworkResult().getBranchResult("l12").getP1(), LoadFlowAssert.DELTA_POWER);
+            assertEquals(0, postContingencyResult.getNetworkResult().getBranchResult("l13").getP1(), LoadFlowAssert.DELTA_POWER);
+            assertEquals(1, postContingencyResult.getNetworkResult().getBranchResult("l23").getP1(), LoadFlowAssert.DELTA_POWER);
+
+            // verify active load and generation of other components have been lost
+            assertEquals(6, postContingencyResult.getConnectivityResult().getDisconnectedGenerationActivePower(), LoadFlowAssert.DELTA_POWER);
+            assertEquals(7, postContingencyResult.getConnectivityResult().getDisconnectedLoadActivePower(), LoadFlowAssert.DELTA_POWER);
+        });
     }
 
     @Test
@@ -2337,7 +2464,7 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
                 .setBus("BUS_3")
                 .setMinP(0.0)
                 .setMaxP(140)
-                .setTargetP(0)
+                .setTargetP(1)
                 .setTargetV(33)
                 .setVoltageRegulatorOn(true)
                 .add();
@@ -2347,14 +2474,12 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         lfParameters.setTransformerVoltageControlOn(true);
         OpenLoadFlowParameters openLoadFlowParameters = new OpenLoadFlowParameters();
         openLoadFlowParameters.setTransformerVoltageControlMode(OpenLoadFlowParameters.TransformerVoltageControlMode.AFTER_GENERATOR_VOLTAGE_CONTROL);
-        openLoadFlowParameters.setMinRealisticVoltage(0.0);
-        openLoadFlowParameters.setMaxRealisticVoltage(3.0);
         lfParameters.addExtension(OpenLoadFlowParameters.class, openLoadFlowParameters);
         SecurityAnalysisParameters securityAnalysisParameters = new SecurityAnalysisParameters();
         securityAnalysisParameters.setLoadFlowParameters(lfParameters);
         List<StateMonitor> monitors = List.of(new StateMonitor(ContingencyContext.all(), Collections.emptySet(), Collections.singleton("VL_2"), Collections.emptySet()));
         SecurityAnalysisResult result = runSecurityAnalysis(network, contingencies, monitors, securityAnalysisParameters);
-        assertEquals(148.396, result.getPostContingencyResults().get(0).getNetworkResult().getBusResult("BUS_2").getV(), LoadFlowAssert.DELTA_V);
+        assertEquals(111.761, result.getPostContingencyResults().get(0).getNetworkResult().getBusResult("BUS_2").getV(), LoadFlowAssert.DELTA_V);
     }
 
     @Test
@@ -2515,7 +2640,7 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         network.getGenerator("GEN").setMaxP(4000).setMinP(-4000);
 
         TieLine line = network.getTieLine("NHV1_NHV2_1");
-        line.newCurrentLimits2()
+        line.getOrCreateSelectedOperationalLimitsGroup2().newCurrentLimits()
                 .setPermanentLimit(900.0)
                 .beginTemporaryLimit()
                     .setName("10'")
@@ -2529,7 +2654,7 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
                 .endTemporaryLimit()
                 .add();
         TieLine line2 = network.getTieLine("NHV1_NHV2_2");
-        line2.newCurrentLimits2()
+        line2.getOrCreateSelectedOperationalLimitsGroup2().newCurrentLimits()
                 .setPermanentLimit(900.0)
                 .beginTemporaryLimit()
                     .setName("20'")
@@ -2569,8 +2694,8 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
                 .getLimitViolationsResult().getLimitViolations().get(0));
         assertEquals(0, compare3); // FIXME line open at one side
 
-        line.newCurrentLimits1().setPermanentLimit(900.0).add();
-        line2.newCurrentLimits1().setPermanentLimit(900.0).add();
+        line.getOrCreateSelectedOperationalLimitsGroup1().newCurrentLimits().setPermanentLimit(900.0).add();
+        line2.getOrCreateSelectedOperationalLimitsGroup1().newCurrentLimits().setPermanentLimit(900.0).add();
         securityAnalysisParameters.getLoadFlowParameters().setDc(true);
         SecurityAnalysisResult result2 = runSecurityAnalysis(network, contingencies.getContingencies(network), Collections.emptyList(), securityAnalysisParameters);
 
@@ -2804,6 +2929,13 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         assertEquals(2, postContingencyResult.getLimitViolationsResult().getLimitViolations().size());
         assertEquals("VLLOAD", postContingencyResult.getLimitViolationsResult().getLimitViolations().get(0).getSubjectId());
         assertEquals("VLLOAD", postContingencyResult.getLimitViolationsResult().getLimitViolations().get(1).getSubjectId());
+
+        List<LimitViolation> limitViolations = result.getPostContingencyResults().get(0).getLimitViolationsResult().getLimitViolations();
+        assertEquals(2, limitViolations.size());
+        BusBreakerViolationLocation busBreakerViolationLocation1 = (BusBreakerViolationLocation) limitViolations.get(0).getViolationLocation().get();
+        BusBreakerViolationLocation busBreakerViolationLocation2 = (BusBreakerViolationLocation) limitViolations.get(1).getViolationLocation().get();
+        assertEquals(busBreakerViolationLocation1.getBusIds(), List.of("NLOAD"));
+        assertEquals(busBreakerViolationLocation2.getBusIds(), List.of("NLOAD2"));
     }
 
     @Test
@@ -2869,6 +3001,12 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         List<Contingency> contingencies = List.of(new Contingency("c", new SwitchContingency("SWITCH")));
         List<StateMonitor> monitors = createNetworkMonitors(network);
         SecurityAnalysisResult result = runSecurityAnalysis(network, contingencies, monitors, securityAnalysisParameters);
+        // Check a violation location in breaker mode
+        assertEquals(1, result.getPreContingencyResult().getLimitViolationsResult().getLimitViolations().size());
+        LimitViolation lv = result.getPreContingencyResult().getLimitViolationsResult().getLimitViolations().get(0);
+        assertEquals(LimitViolationType.HIGH_VOLTAGE, lv.getLimitType());
+        assertEquals(List.of(network.getBusBreakerView().getBus("BUS_5")), lv.getViolationLocation().map(l -> l.getBusBreakerView(network).getBusStream().toList()).orElse(Collections.emptyList()));
+
         PostContingencyResult postContingencyResult = getPostContingencyResult(result, "c");
         assertSame(PostContingencyComputationStatus.CONVERGED, postContingencyResult.getStatus());
         assertEquals(33.824, result.getPreContingencyResult().getNetworkResult().getBusResult("BUS_3").getV(), DELTA_V);
@@ -2895,7 +3033,9 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         LoadFlowResult result = loadFlowRunner.run(network, parameters);
         assertTrue(result.isFullyConverged());
         assertVoltageEquals(393, b3);
-        assertEquals(1, shunt.getSectionCount());
+        assertEquals(1, shunt.getSolvedSectionCount());
+        assertEquals(0, shunt.getSectionCount());
+        assertEquals(0, shunt2.getSolvedSectionCount());
         assertEquals(0, shunt2.getSectionCount());
         assertReactivePowerEquals(-134.585, g2.getTerminal());
 
@@ -2905,8 +3045,10 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         LoadFlowResult result2 = loadFlowRunner.run(network, parameters);
         assertTrue(result2.isFullyConverged());
         assertVoltageEquals(395, b3);
-        assertEquals(1, shunt.getSectionCount());
-        assertEquals(1, shunt2.getSectionCount());
+        assertEquals(1, shunt.getSolvedSectionCount());
+        assertEquals(0, shunt.getSectionCount());
+        assertEquals(1, shunt2.getSolvedSectionCount());
+        assertEquals(0, shunt2.getSectionCount());
         assertReactivePowerEquals(-110.176, g2.getTerminal());
 
         shunt.setSectionCount(0);
@@ -2925,7 +3067,7 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
     @Test
     void testPermanentLimitName() {
         Network network = EurostagFactory.fix(EurostagTutorialExample1Factory.create());
-        network.getLine("NHV1_NHV2_1").newCurrentLimits1()
+        network.getLine("NHV1_NHV2_1").getOrCreateSelectedOperationalLimitsGroup1().newCurrentLimits()
                 .setPermanentLimit(300)
                 .add();
         SecurityAnalysisResult result = runSecurityAnalysis(network);
@@ -3031,7 +3173,7 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         assertEquals(0, l34p1, 0);
         assertEquals(0, l34q1, 0);
         assertEquals(0, l34p2, DELTA_POWER);
-        assertEquals(-1.334, l34q2, DELTA_POWER);
+        assertEquals(-1.335, l34q2, DELTA_POWER);
 
         l23.getTerminal2().connect();
         l34.getTerminal1().connect();
@@ -3060,7 +3202,7 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         assertEquals(l34p1, l34Result.getP1(), DELTA_POWER);
         assertEquals(l34q1, l34Result.getQ1(), DELTA_POWER);
         assertEquals(l34p2, l34Result.getP2(), DELTA_POWER);
-        assertEquals(-1.334, l34Result.getQ2(), DELTA_POWER); // ????
+        assertEquals(-1.335, l34Result.getQ2(), DELTA_POWER); // ????
     }
 
     @Test
@@ -3146,6 +3288,7 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
                 .setDistributedSlack(false)
                 .setTransformerVoltageControlOn(true);
         OpenLoadFlowParameters.create(loadFlowParameters)
+                .setTransformerVoltageControlMode(OpenLoadFlowParameters.TransformerVoltageControlMode.WITH_GENERATOR_VOLTAGE_CONTROL)
                 .setVoltageTargetPriorities(List.of("TRANSFORMER"));
         SecurityAnalysisParameters securityAnalysisParameters = new SecurityAnalysisParameters()
                 .setLoadFlowParameters(loadFlowParameters);
@@ -3226,7 +3369,8 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         LoadFlowParameters loadFlowParameters = new LoadFlowParameters()
                 .setDistributedSlack(false)
                 .setTransformerVoltageControlOn(true);
-        OpenLoadFlowParameters.create(loadFlowParameters);
+        OpenLoadFlowParameters.create(loadFlowParameters)
+                .setTransformerVoltageControlMode(OpenLoadFlowParameters.TransformerVoltageControlMode.WITH_GENERATOR_VOLTAGE_CONTROL);
         SecurityAnalysisParameters securityAnalysisParameters = new SecurityAnalysisParameters()
                 .setLoadFlowParameters(loadFlowParameters);
         OpenSecurityAnalysisParameters openSecurityAnalysisParameters = new OpenSecurityAnalysisParameters()
@@ -3445,7 +3589,7 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
     }
 
     @Test
-    void testMultiThreads() {
+    void testMultiThreads() throws IOException {
         Network network = createNodeBreakerNetwork();
         assertFalse(network.getVariantManager().isVariantMultiThreadAccessAllowed());
 
@@ -3460,12 +3604,35 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
                 .map(id -> new Contingency(id, new BranchContingency(id)))
                 .toList();
 
-        SecurityAnalysisResult resultOneThread = runSecurityAnalysis(network, contingencies, Collections.emptyList(), securityAnalysisParameters);
+        ReportNode reportNodeOneThread = ReportNode.newRootReportNode()
+                .withMessageTemplate("MT_SA_TEST")
+                .build();
+        SecurityAnalysisResult resultOneThread =
+                runSecurityAnalysis(network, contingencies, Collections.emptyList(), securityAnalysisParameters, reportNodeOneThread);
+
         securityAnalysisParametersExt.setThreadCount(2);
-        SecurityAnalysisResult resultTwoThreads = runSecurityAnalysis(network, contingencies, Collections.emptyList(), securityAnalysisParameters);
+        ReportNode reportNodeTwoThreads = ReportNode.newRootReportNode()
+                .withMessageTemplate("MT_SA_TEST")
+                .build();
+        SecurityAnalysisResult resultTwoThreads =
+                runSecurityAnalysis(network, contingencies, Collections.emptyList(), securityAnalysisParameters, reportNodeOneThread);
+
         assertFalse(network.getVariantManager().isVariantMultiThreadAccessAllowed());
         assertEquals(resultOneThread.getPostContingencyResults().size(), resultTwoThreads.getPostContingencyResults().size());
         assertEquals(resultOneThread.getOperatorStrategyResults().size(), resultTwoThreads.getOperatorStrategyResults().size());
+
+        StringWriter swOneThread = new StringWriter();
+        reportNodeTwoThreads.print(swOneThread);
+
+        StringWriter swTwoThreads = new StringWriter();
+        reportNodeTwoThreads.print(swTwoThreads);
+
+        // The two report nodes should be equals
+        assertEquals(swOneThread.toString(), swTwoThreads.toString());
+
+        // test with mt and no report
+        securityAnalysisParametersExt.setThreadCount(2);
+        runSecurityAnalysis(network, contingencies, Collections.emptyList(), securityAnalysisParameters, ReportNode.NO_OP);
     }
 
     @Test
@@ -3492,13 +3659,22 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
 
     private void testWithFictitiousLoad(LoadFlowParameters.BalanceType balanceType) {
         Network network = DistributedSlackNetworkFactory.createNetworkWithLoads();
+
+        // Add a variable part to each load
+        network.getLoadStream().filter(l -> l.getExtension(LoadDetail.class) == null)
+                .forEach(l ->
+                l.newExtension(LoadDetailAdder.class)
+                        .withFixedActivePower(l.getP0())
+                        .withVariableActivePower(l.getP0())
+                        .add());
+
         network.getLoad("l1").setFictitious(true); // single load on bus
-        network.getLoad("l4").setLoadType(LoadType.FICTITIOUS); // one load amongst many on the bus
+        network.getLoad("l3").setLoadType(LoadType.FICTITIOUS); // one load amongst many on the bus
 
         List<Contingency> contingencies = List.of(
                 new Contingency("l5", new LoadContingency("l5")),
                 new Contingency("l1", new LoadContingency("l1")),
-                new Contingency("l4", new LoadContingency("l4")));
+                new Contingency("l3", new LoadContingency("l3")));
 
         List<StateMonitor> monitors = List.of(
                 new StateMonitor(ContingencyContext.all(), Set.of("l14", "l24", "l34"), emptySet(), emptySet())
@@ -3539,7 +3715,7 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         network.getLoad("l1").getTerminal().connect();
 
         // contingency 2: only fictitious load amongst many on the bus
-        network.getLoad("l4").getTerminal().disconnect();
+        network.getLoad("l3").getTerminal().disconnect();
         loadFlowRunner.run(network, parameters);
         NetworkResult networkResultContingency2 = result.getPostContingencyResults().get(2).getNetworkResult();
         assertEquals(network.getLine("l24").getTerminal1().getP(), networkResultContingency2.getBranchResult("l24").getP1(), LoadFlowAssert.DELTA_POWER);
@@ -3556,6 +3732,15 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
 
     private void testWithFictitiousLoad2(LoadFlowParameters.BalanceType balanceType) {
         Network network = DistributedSlackNetworkFactory.createNetworkWithLoads();
+
+        // Add a variable part to each load
+        network.getLoadStream().filter(l -> l.getExtension(LoadDetail.class) == null)
+                .forEach(l ->
+                        l.newExtension(LoadDetailAdder.class)
+                                .withFixedActivePower(l.getP0())
+                                .withVariableActivePower(l.getP0())
+                                .add());
+
         network.getLoad("l4").setLoadType(LoadType.FICTITIOUS); // one load amongst many on the bus
 
         // contigency on two loads on the same bus: one is fictitious and one is not
@@ -3589,8 +3774,9 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         assertEquals(network.getLine("l34").getTerminal1().getP(), networkResultContingency0.getBranchResult("l34").getP1(), LoadFlowAssert.DELTA_POWER);
     }
 
-    @Test
-    void multiComponentSaTest() {
+    @ParameterizedTest
+    @ValueSource(ints = {1, 2})
+    void multiComponentSaTest(int threadCount) throws IOException {
         Network network = FourBusNetworkFactory.createWithTwoScs();
         // Add a load on small component
         network.getBusBreakerView().getBus("c1")
@@ -3603,20 +3789,42 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
                 .add();
 
         SecurityAnalysisParameters securityAnalysisParameters = new SecurityAnalysisParameters();
+        OpenSecurityAnalysisParameters securityAnalysisParametersExt = new OpenSecurityAnalysisParameters()
+                .setThreadCount(threadCount);
+        securityAnalysisParameters.addExtension(OpenSecurityAnalysisParameters.class, securityAnalysisParametersExt);
         securityAnalysisParameters.getLoadFlowParameters().setConnectedComponentMode(LoadFlowParameters.ConnectedComponentMode.ALL);
 
-        List<Contingency> contingencies = List.of(new Contingency("l13", new BranchContingency("l13")),
+        List<Contingency> checkedContingencies = List.of(new Contingency("l13", new BranchContingency("l13")),
                 new Contingency("dummyLoad", new LoadContingency("dummyLoad")));
+
+        // Add more contingencies to activate multi thread
+        List<Contingency> contingencies = new ArrayList<>(checkedContingencies);
+        for (int i = 0; i < 10; i++) {
+            contingencies.add(new Contingency("l13_" + i, new BranchContingency("l13")));
+            contingencies.add(new Contingency("dummyLoad_" + i, new LoadContingency("dummyLoad")));
+        }
 
         // Monitor branch in both components
         List<StateMonitor> monitors = List.of(
                 new StateMonitor(ContingencyContext.all(), Set.of("l14", "l12", "l23", "lc12", "lc12Bis"), emptySet(), emptySet())
         );
 
-        SecurityAnalysisResult results = runSecurityAnalysis(network, contingencies, monitors, securityAnalysisParameters);
+        ReportNode testReport = ReportNode.newRootReportNode()
+                .withResourceBundles(PowsyblOpenLoadFlowReportResourceBundle.BASE_NAME, PowsyblTestReportResourceBundle.TEST_BASE_NAME)
+                .withMessageTemplate("TEST")
+                .build();
+
+        SecurityAnalysisResult results = runSecurityAnalysis(network, contingencies, monitors, securityAnalysisParameters, testReport);
         NetworkResult preContingencyResults = results.getPreContingencyResult().getNetworkResult();
-        NetworkResult postContingencyResultsl13 = results.getPostContingencyResults().get(0).getNetworkResult();
-        NetworkResult postContingencyResultslc12Bis = results.getPostContingencyResults().get(1).getNetworkResult();
+        NetworkResult postContingencyResultsl13 = results.getPostContingencyResults().stream()
+                .filter(r -> r.getContingency().getId().equals("l13"))
+                .findAny()
+                .map(AbstractContingencyResult::getNetworkResult).orElseThrow();
+
+        NetworkResult postContingencyResultsDummyLoad = results.getPostContingencyResults().stream()
+                .filter(r -> r.getContingency().getId().equals("dummyLoad"))
+                .findAny()
+                .map(AbstractContingencyResult::getNetworkResult).orElseThrow();
 
         // Result for base case is available for all components
         assertEquals(0.084, preContingencyResults.getBranchResult("l14").getP1(), LoadFlowAssert.DELTA_POWER);
@@ -3635,12 +3843,39 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         assertNull(postContingencyResultsl13.getBranchResult("lc12Bis"));
 
         // Result for post contingency on dummyLoad is available for part of the network on which the contingency has an impact
-        assertEquals(0.498, postContingencyResultslc12Bis.getBranchResult("lc12").getP1(), LoadFlowAssert.DELTA_POWER);
-        assertEquals(0.498, postContingencyResultslc12Bis.getBranchResult("lc12Bis").getP1(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(0.498, postContingencyResultsDummyLoad.getBranchResult("lc12").getP1(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(0.498, postContingencyResultsDummyLoad.getBranchResult("lc12Bis").getP1(), LoadFlowAssert.DELTA_POWER);
+
+        StringWriter sw = new StringWriter();
+        testReport.print(sw);
+        // Remove Windows EOL
+        String reportString = TestUtil.normalizeLineSeparator(sw.toString());
+
+        // The report should be the same with one or two threads
+        // Let's just check the size here
+        assertEquals(8389, reportString.length());
+        // Check also that the preCont report is before the postContResults in the second CC
+        String expected =
+                """
+                              + Network CC1 SC1
+                                 + Network info
+                                    Network has 2 buses and 2 branches
+                                    Network balance: active generation=2.0 MW, active load=2.0 MW, reactive generation=0.0 MVar, reactive load=0.0 MVar
+                                    Angle reference bus: c1_vl_0
+                                    Slack bus: c1_vl_0
+                                 + Pre-contingency simulation
+                                    Outer loop DistributedSlack
+                                    Outer loop VoltageMonitoring
+                                    Outer loop ReactiveLimits
+                                    AC load flow completed successfully (solverStatus=CONVERGED, outerloopStatus=STABLE)\
+                        """;
+
+        assertTrue(reportString.contains(expected));
     }
 
-    @Test
-    void multiComponentSaTestContingencyBothComponentsAndOperatorStrategy() {
+    @ParameterizedTest
+    @ValueSource(ints = {1, 2})
+    void multiComponentSaTestContingencyBothComponentsAndOperatorStrategy(int threadCount) throws IOException {
 
         Network network = FourBusNetworkFactory.createWithTwoScs();
         // Add a load on small component
@@ -3654,10 +3889,19 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
                 .add();
 
         SecurityAnalysisParameters securityAnalysisParameters = new SecurityAnalysisParameters();
+        OpenSecurityAnalysisParameters securityAnalysisParametersExt = new OpenSecurityAnalysisParameters()
+                .setThreadCount(threadCount);
+        securityAnalysisParameters.addExtension(OpenSecurityAnalysisParameters.class, securityAnalysisParametersExt);
         securityAnalysisParameters.getLoadFlowParameters().setConnectedComponentMode(LoadFlowParameters.ConnectedComponentMode.ALL);
 
         // This contingency should impact both components
-        List<Contingency> contingencies = List.of(new Contingency("compositeContingency", List.of(new BranchContingency("l13"), new LoadContingency("dummyLoad"))));
+        List<Contingency> checkedContingencies = List.of(new Contingency("compositeContingency", List.of(new BranchContingency("l13"), new LoadContingency("dummyLoad"))));
+
+        // Add more contingencies to activate multi thread
+        List<Contingency> contingencies = new ArrayList<>(checkedContingencies);
+        for (int i = 0; i < 10; i++) {
+            contingencies.add(new Contingency("compositeContingency_" + i, List.of(new BranchContingency("l13"), new LoadContingency("dummyLoad"))));
+        }
 
         // Monitor branch in both components
         List<StateMonitor> monitors = List.of(
@@ -3666,9 +3910,16 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
 
         List<Action> actions = List.of(new TerminalsConnectionAction("open_l13", "l13", true),
                 new LoadActionBuilder().withId("dc2").withLoadId("dc2").withRelativeValue(false).withActivePowerValue(1).build());
-        List<OperatorStrategy> operatorStrategies = List.of(new OperatorStrategy("strategy1", ContingencyContext.specificContingency("compositeContingency"), new TrueCondition(), List.of("open_l13", "dc2")));
+        List<OperatorStrategy> operatorStrategies = contingencies.stream()
+                .map(c -> new OperatorStrategy("strategy_" + c.getId(), ContingencyContext.specificContingency(c.getId()), new TrueCondition(), List.of("open_l13", "dc2")))
+                .toList();
 
-        SecurityAnalysisResult results = runSecurityAnalysis(network, contingencies, monitors, securityAnalysisParameters, operatorStrategies, actions, ReportNode.NO_OP);
+        ReportNode reportNode = ReportNode.newRootReportNode()
+                .withResourceBundles(PowsyblOpenLoadFlowReportResourceBundle.BASE_NAME, PowsyblTestReportResourceBundle.TEST_BASE_NAME)
+                .withMessageTemplate("TEST")
+                .build();
+
+        SecurityAnalysisResult results = runSecurityAnalysis(network, contingencies, monitors, securityAnalysisParameters, operatorStrategies, actions, reportNode);
         NetworkResult preContingencyResults = results.getPreContingencyResult().getNetworkResult();
 
         // Result for base case is available for all components
@@ -3678,7 +3929,11 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         assertEquals(0.493, preContingencyResults.getBranchResult("lc12").getP1(), LoadFlowAssert.DELTA_POWER);
         assertEquals(0.493, preContingencyResults.getBranchResult("lc12Bis").getP1(), LoadFlowAssert.DELTA_POWER);
 
-        NetworkResult postContingencyResults = results.getPostContingencyResults().get(0).getNetworkResult();
+        NetworkResult postContingencyResults = results.getPostContingencyResults().stream()
+                .filter(r -> r.getContingency().getId().equals("compositeContingency"))
+                .findAny()
+                .map(AbstractContingencyResult::getNetworkResult)
+                .orElseThrow();
 
         // Because contingency impact both networks, each simulation should output results for its components
         // Results should then be merged in a single post contingency result
@@ -3696,7 +3951,10 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         assertEquals(1.311, operatorStrategyResult.getBranchResult("l23").getP1(), LoadFlowAssert.DELTA_POWER);
         assertEquals(0.499, operatorStrategyResult.getBranchResult("lc12").getP1(), LoadFlowAssert.DELTA_POWER);
         assertEquals(0.499, operatorStrategyResult.getBranchResult("lc12Bis").getP1(), LoadFlowAssert.DELTA_POWER);
+
+        assertReportEquals("/saMtReport.txt", reportNode);
     }
+
 
     /**
      * FIXME Multiple initial components with an action reconnecting a line linking both components is not well supported
@@ -3887,5 +4145,575 @@ class OpenSecurityAnalysisTest extends AbstractOpenSecurityAnalysisTest {
         // G2 within reactive limits
         assertReactivePowerEquals(0.0, network.getGenerator("G2").getTerminal());
         assertVoltageEquals(400.01, network.getBusBreakerView().getBus("B2"));
+    }
+
+    @Test
+    void testComponentSelectionOneCCtwoSC() {
+        // Network has one CC with two SC
+        Network network = HvdcNetworkFactory.createVsc();
+        LfNetworkList networks = new LfNetworkList(Networks.load(network, new LfNetworkParameters().setComputeMainConnectedComponentOnly(false)));
+        assertEquals(2, networks.getList().size());
+
+        assertEquals(0, networks.getList().get(0).getNumCC());
+        assertEquals(0, networks.getList().get(0).getNumSC());
+        assertEquals(0, networks.getList().get(1).getNumCC());
+        assertEquals(1, networks.getList().get(1).getNumSC());
+
+        // Main connected component mode and all connected component mode should yield same result
+        List<LfNetwork> componentMain = AbstractSecurityAnalysis.getNetworksToSimulate(networks, LoadFlowParameters.ConnectedComponentMode.MAIN);
+        assertEquals(2, componentMain.size());
+        assertEquals(0, componentMain.get(0).getNumCC());
+        assertEquals(0, componentMain.get(0).getNumSC());
+        assertEquals(0, componentMain.get(1).getNumCC());
+        assertEquals(1, componentMain.get(1).getNumSC());
+
+        List<LfNetwork> componentAll = AbstractSecurityAnalysis.getNetworksToSimulate(networks, LoadFlowParameters.ConnectedComponentMode.ALL);
+        assertEquals(2, componentAll.size());
+        assertEquals(0, componentAll.get(0).getNumCC());
+        assertEquals(0, componentAll.get(0).getNumSC());
+        assertEquals(0, componentAll.get(1).getNumCC());
+        assertEquals(1, componentAll.get(1).getNumSC());
+    }
+
+    @Test
+    void testComponentSelectionTwoCC() {
+        Network network = FourBusNetworkFactory.createWithTwoScs();
+        LfNetworkList networks = new LfNetworkList(Networks.load(network, new LfNetworkParameters().setComputeMainConnectedComponentOnly(false)));
+        assertEquals(2, networks.getList().size());
+
+        assertEquals(0, networks.getList().get(0).getNumCC());
+        assertEquals(0, networks.getList().get(0).getNumSC());
+        assertEquals(1, networks.getList().get(1).getNumCC());
+        assertEquals(1, networks.getList().get(1).getNumSC());
+
+        // Main connected component mode should only select component associated to main CC
+        List<LfNetwork> componentMain = AbstractSecurityAnalysis.getNetworksToSimulate(networks, LoadFlowParameters.ConnectedComponentMode.MAIN);
+        assertEquals(1, componentMain.size());
+        assertEquals(0, componentMain.get(0).getNumCC());
+        assertEquals(0, componentMain.get(0).getNumSC());
+
+        // All connected component mode should select all component
+        List<LfNetwork> componentAll = AbstractSecurityAnalysis.getNetworksToSimulate(networks, LoadFlowParameters.ConnectedComponentMode.ALL);
+        assertEquals(2, componentAll.size());
+        assertEquals(0, componentAll.get(0).getNumCC());
+        assertEquals(0, componentAll.get(0).getNumSC());
+        assertEquals(1, componentAll.get(1).getNumCC());
+        assertEquals(1, componentAll.get(1).getNumSC());
+    }
+
+    @Test
+    void testNoCc0Sc0() {
+        Network network = ConnectedComponentNetworkFactory.createNoCc0Sc0();
+        var compByBus = network.getBusBreakerView().getBusStream().collect(Collectors.toMap(Identifiable::getId, b -> String.format("CC%d SC%d", b.getConnectedComponent().getNum(), b.getSynchronousComponent().getNum())));
+        assertEquals(6, compByBus.size());
+        assertEquals("CC0 SC1", compByBus.get("b01"));
+        assertEquals("CC0 SC2", compByBus.get("b02"));
+        assertEquals("CC0 SC3", compByBus.get("b03"));
+        assertEquals("CC0 SC4", compByBus.get("b04"));
+        assertEquals("CC1 SC0", compByBus.get("b11"));
+        assertEquals("CC1 SC0", compByBus.get("b12"));
+        LoadFlowParameters lfParametersAll = new LoadFlowParameters().setConnectedComponentMode(LoadFlowParameters.ConnectedComponentMode.ALL);
+        LoadFlowParameters lfParametersMain = new LoadFlowParameters().setConnectedComponentMode(LoadFlowParameters.ConnectedComponentMode.MAIN);
+        var lfResultAll = LoadFlow.run(network, lfParametersAll);
+        assertTrue(lfResultAll.isFullyConverged());
+        var lfResultMain = LoadFlow.run(network, lfParametersMain);
+        assertTrue(lfResultAll.isFullyConverged());
+        assertEquals(5, lfResultAll.getComponentResults().size()); // 5 SCs
+        assertTrue(lfResultMain.isFullyConverged());
+        assertEquals(4, lfResultMain.getComponentResults().size()); // 4 SCs
+
+        var saResultMain = runSecurityAnalysis(network, Collections.emptyList(), createNetworkMonitors(network), lfParametersMain);
+        assertEquals(LoadFlowResult.ComponentResult.Status.CONVERGED, saResultMain.getPreContingencyResult().getStatus());
+        assertEquals(4, saResultMain.getPreContingencyResult().getNetworkResult().getBusResults().size()); // 4 buses in CC0
+        var saResultAll = runSecurityAnalysis(network, Collections.emptyList(), createNetworkMonitors(network), lfParametersAll);
+        assertEquals(LoadFlowResult.ComponentResult.Status.CONVERGED, saResultAll.getPreContingencyResult().getStatus());
+        assertEquals(6, saResultAll.getPreContingencyResult().getNetworkResult().getBusResults().size()); // 6 buses in total
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = {false, true})
+    void testDcSaHvdcLineContingency(boolean dcFastMode) {
+        Network network = HvdcNetworkFactory.createNetworkWithGenerators();
+
+        SecurityAnalysisParameters securityAnalysisParameters = new SecurityAnalysisParameters();
+        securityAnalysisParameters.getLoadFlowParameters().setDc(true);
+        OpenSecurityAnalysisParameters openSecurityAnalysisParameters = new OpenSecurityAnalysisParameters();
+        openSecurityAnalysisParameters.setDcFastMode(dcFastMode);
+        securityAnalysisParameters.addExtension(OpenSecurityAnalysisParameters.class, openSecurityAnalysisParameters);
+
+        List<StateMonitor> monitors = createAllBranchesMonitors(network);
+        List<Contingency> contingencies = List.of(new Contingency("hvdc34+g1", List.of(new HvdcLineContingency("hvdc34"), new GeneratorContingency("g1"))));
+        SecurityAnalysisResult result = runSecurityAnalysis(network, contingencies, monitors, securityAnalysisParameters);
+
+        // apply contingency by hand
+        network.getHvdcLine("hvdc34").remove();
+        network.getGenerator("g1").disconnect();
+        // run load flow to compare results
+        loadFlowRunner.run(network, securityAnalysisParameters.getLoadFlowParameters());
+
+        // post-contingency tests
+        PostContingencyResult postContingencyResult = getPostContingencyResult(result, "hvdc34+g1");
+        assertEquals(network.getLine("l12").getTerminal1().getP(), postContingencyResult.getNetworkResult().getBranchResult("l12").getP1(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(network.getLine("l13").getTerminal1().getP(), postContingencyResult.getNetworkResult().getBranchResult("l13").getP1(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(network.getLine("l23").getTerminal1().getP(), postContingencyResult.getNetworkResult().getBranchResult("l23").getP1(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(network.getLine("l25").getTerminal1().getP(), postContingencyResult.getNetworkResult().getBranchResult("l25").getP1(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(network.getLine("l45").getTerminal1().getP(), postContingencyResult.getNetworkResult().getBranchResult("l45").getP1(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(network.getLine("l46").getTerminal1().getP(), postContingencyResult.getNetworkResult().getBranchResult("l46").getP1(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(network.getLine("l56").getTerminal1().getP(), postContingencyResult.getNetworkResult().getBranchResult("l56").getP1(), LoadFlowAssert.DELTA_POWER);
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = {false, true})
+    void testDcSaHvdcLineWithPowerAfterContingency(boolean dcFastMode) {
+        Network network = HvdcNetworkFactory.createNetworkWithGenerators2();
+
+        SecurityAnalysisParameters securityAnalysisParameters = new SecurityAnalysisParameters();
+        securityAnalysisParameters.getLoadFlowParameters().setDc(true);
+        OpenSecurityAnalysisParameters openSecurityAnalysisParameters = new OpenSecurityAnalysisParameters();
+        openSecurityAnalysisParameters.setDcFastMode(dcFastMode);
+        securityAnalysisParameters.addExtension(OpenSecurityAnalysisParameters.class, openSecurityAnalysisParameters);
+
+        List<StateMonitor> monitors = createAllBranchesMonitors(network);
+        List<Contingency> contingencies = List.of(new Contingency("l25", List.of(new LineContingency("l25"))));
+        SecurityAnalysisResult result = runSecurityAnalysis(network, contingencies, monitors, securityAnalysisParameters);
+
+        // apply contingency by hand
+        network.getLine("l25").disconnect();
+        // run load flow to compare results
+        loadFlowRunner.run(network, securityAnalysisParameters.getLoadFlowParameters());
+
+        // post-contingency tests
+        PostContingencyResult postContingencyResult = getPostContingencyResult(result, "l25");
+        assertEquals(1, postContingencyResult.getConnectivityResult().getCreatedSynchronousComponentCount());
+        assertEquals(3, postContingencyResult.getNetworkResult().getBranchResults().size()); // only branches in main synchronous component
+        assertEquals(network.getLine("l12").getTerminal1().getP(), postContingencyResult.getNetworkResult().getBranchResult("l12").getP1(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(network.getLine("l13").getTerminal1().getP(), postContingencyResult.getNetworkResult().getBranchResult("l13").getP1(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(network.getLine("l23").getTerminal1().getP(), postContingencyResult.getNetworkResult().getBranchResult("l23").getP1(), LoadFlowAssert.DELTA_POWER);
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = {false, true})
+    void testDcSaHvdcLineWithoutPowerAfterContingency(boolean dcFastMode) {
+        Network network = HvdcNetworkFactory.createWithHvdcInAcEmulation();
+
+        SecurityAnalysisParameters securityAnalysisParameters = new SecurityAnalysisParameters();
+        securityAnalysisParameters.getLoadFlowParameters().setDc(true);
+        OpenSecurityAnalysisParameters openSecurityAnalysisParameters = new OpenSecurityAnalysisParameters();
+        openSecurityAnalysisParameters.setDcFastMode(dcFastMode);
+        securityAnalysisParameters.addExtension(OpenSecurityAnalysisParameters.class, openSecurityAnalysisParameters);
+
+        List<StateMonitor> monitors = createAllBranchesMonitors(network);
+        List<Contingency> contingencies = List.of(new Contingency("l25+l45+l46",
+                List.of(new LineContingency("l25"), new LineContingency("l45"), new LineContingency("l46"))));
+        SecurityAnalysisResult result = runSecurityAnalysis(network, contingencies, monitors, securityAnalysisParameters);
+
+        // apply contingency by hand
+        network.getLine("l25").disconnect();
+        network.getLine("l45").disconnect();
+        network.getLine("l46").disconnect();
+        // run load flow to compare results
+        loadFlowRunner.run(network, securityAnalysisParameters.getLoadFlowParameters());
+
+        // post-contingency tests
+        PostContingencyResult postContingencyResult = getPostContingencyResult(result, "l25+l45+l46");
+        assertEquals(2, postContingencyResult.getConnectivityResult().getCreatedSynchronousComponentCount());
+        assertEquals(3, postContingencyResult.getNetworkResult().getBranchResults().size()); // only branches in main synchronous component
+        assertEquals(network.getLine("l12").getTerminal1().getP(), postContingencyResult.getNetworkResult().getBranchResult("l12").getP1(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(network.getLine("l13").getTerminal1().getP(), postContingencyResult.getNetworkResult().getBranchResult("l13").getP1(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(network.getLine("l23").getTerminal1().getP(), postContingencyResult.getNetworkResult().getBranchResult("l23").getP1(), LoadFlowAssert.DELTA_POWER);
+    }
+
+    @ParameterizedTest
+    @ValueSource(booleans = {false, true})
+    void testDcSaHvdcLineInAcEmulationContingency(boolean dcFastMode) {
+        Network network = HvdcNetworkFactory.createHvdcInAcEmulationInSymetricNetwork();
+        network.newLine()
+                .setId("l12_2")
+                .setBus1("b1")
+                .setConnectableBus1("b1")
+                .setBus2("b2")
+                .setConnectableBus2("b2")
+                .setR(0)
+                .setX(0.2f)
+                .add();
+
+        SecurityAnalysisParameters securityAnalysisParameters = new SecurityAnalysisParameters();
+        securityAnalysisParameters.getLoadFlowParameters().setDc(true).setHvdcAcEmulation(true);
+        OpenSecurityAnalysisParameters openSecurityAnalysisParameters = new OpenSecurityAnalysisParameters();
+        openSecurityAnalysisParameters.setDcFastMode(dcFastMode);
+        securityAnalysisParameters.addExtension(OpenSecurityAnalysisParameters.class, openSecurityAnalysisParameters);
+
+        List<StateMonitor> monitors = createAllBranchesMonitors(network);
+        List<Contingency> contingencies = List.of(Contingency.hvdcLine("hvdc12"));
+        SecurityAnalysisResult result = runSecurityAnalysis(network, contingencies, monitors, securityAnalysisParameters);
+
+        // apply contingency by hand
+        network.getHvdcLine("hvdc12").remove();
+        // run load flow to compare results
+        loadFlowRunner.run(network, securityAnalysisParameters.getLoadFlowParameters());
+
+        // post-contingency tests
+        PostContingencyResult hvdcContingencyResult = getPostContingencyResult(result, "hvdc12");
+        assertEquals(network.getLine("l12").getTerminal1().getP(), hvdcContingencyResult.getNetworkResult().getBranchResult("l12").getP1(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(network.getLine("l12").getTerminal2().getP(), hvdcContingencyResult.getNetworkResult().getBranchResult("l12").getP2(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(network.getLine("l12_2").getTerminal1().getP(), hvdcContingencyResult.getNetworkResult().getBranchResult("l12_2").getP1(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(network.getLine("l12_2").getTerminal2().getP(), hvdcContingencyResult.getNetworkResult().getBranchResult("l12_2").getP2(), LoadFlowAssert.DELTA_POWER);
+    }
+
+    @ParameterizedTest(name = "DC = {0}")
+    @ValueSource(booleans = {false, true})
+    void testContingencyParameters(boolean isDc) {
+        Network network = MultiAreaNetworkFactory.createTwoAreasWithTieLine();
+
+        // Create 3 times the same contingency
+        Contingency cont1 = new Contingency("load3_aic_load", new LoadContingency("load3"));
+        Contingency cont2 = new Contingency("load3_no_ext", new LoadContingency("load3"));
+        Contingency cont3 = new Contingency("load3_slack_gen_p", new LoadContingency("load3"));
+        Contingency cont4 = new Contingency("load3_no_slack_no_aic", new LoadContingency("load3"));
+        List<Contingency> contingencies = List.of(cont1, cont2, cont3, cont4);
+
+        // Default LF parameters
+        LoadFlowParameters parameters = new LoadFlowParameters()
+                .setDc(isDc)
+                .setDistributedSlack(true)
+                .setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_GENERATION_P_MAX);
+
+        // Add contingency LF parameters to contingencies 1, 3 and 4
+        ContingencyLoadFlowParameters contLfParams1 = new ContingencyLoadFlowParameters()
+                .setDistributedSlack(true)
+                .setAreaInterchangeControl(true)
+                .setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_LOAD);
+        cont1.addExtension(ContingencyLoadFlowParameters.class, contLfParams1);
+
+        ContingencyLoadFlowParameters contLfParams3 = new ContingencyLoadFlowParameters()
+                .setDistributedSlack(true)
+                .setAreaInterchangeControl(false)
+                .setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_GENERATION_P);
+        cont3.addExtension(ContingencyLoadFlowParameters.class, contLfParams3);
+
+        ContingencyLoadFlowParameters contLfParams4 = new ContingencyLoadFlowParameters()
+                .setDistributedSlack(false)
+                .setAreaInterchangeControl(false);
+        cont4.addExtension(ContingencyLoadFlowParameters.class, contLfParams4);
+
+        // Run security analysis
+        List<StateMonitor> monitors = createAllBranchesMonitors(network);
+        SecurityAnalysisParameters securityAnalysisParameters = new SecurityAnalysisParameters();
+        securityAnalysisParameters.setLoadFlowParameters(parameters);
+        SecurityAnalysisResult result = runSecurityAnalysis(network, contingencies, monitors, securityAnalysisParameters);
+
+        // Pre-contingency results -> distributed slack on gens, proportional to Pmax
+        PreContingencyResult preContingencyResult = result.getPreContingencyResult();
+        assertEquals(25, preContingencyResult.getNetworkResult().getBranchResult("tl1").getP1(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(30, preContingencyResult.getNetworkResult().getBranchResult("l34").getP1(), LoadFlowAssert.DELTA_POWER);
+
+        assertEquals(-50, network.getArea("a1").getInterchangeTarget().getAsDouble());
+
+        // Post-contingency results
+        // Contingency 1: AIC, proportional to load
+        PostContingencyResult postContingencyResult1 = getPostContingencyResult(result, "load3_aic_load");
+        assertEquals(50, postContingencyResult1.getNetworkResult().getBranchResult("tl1").getP1(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(75, postContingencyResult1.getNetworkResult().getBranchResult("l34").getP1(), LoadFlowAssert.DELTA_POWER);
+
+        // Contingency 2: no extension, distributed slack proportional to gen Pmax
+        PostContingencyResult postContingencyResult2 = getPostContingencyResult(result, "load3_no_ext");
+        assertEquals(15, postContingencyResult2.getNetworkResult().getBranchResult("tl1").getP1(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(30, postContingencyResult2.getNetworkResult().getBranchResult("l34").getP1(), LoadFlowAssert.DELTA_POWER);
+
+        // Contingency 3: distributed slack, proportional to gen P
+        PostContingencyResult postContingencyResult3 = getPostContingencyResult(result, "load3_slack_gen_p");
+        assertEquals(9.545, postContingencyResult3.getNetworkResult().getBranchResult("tl1").getP1(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(30, postContingencyResult3.getNetworkResult().getBranchResult("l34").getP1(), LoadFlowAssert.DELTA_POWER);
+
+            // Contingency params 4: deactivate all active power distribution
+        PostContingencyResult postContingencyResult4 = getPostContingencyResult(result, "load3_no_slack_no_aic");
+        assertEquals(5, postContingencyResult4.getNetworkResult().getBranchResult("tl1").getP1(), LoadFlowAssert.DELTA_POWER);
+        assertEquals(30, postContingencyResult4.getNetworkResult().getBranchResult("l34").getP1(), LoadFlowAssert.DELTA_POWER);
+
+    }
+
+    @Test
+    void testContingencyParametersOuterLoopNamesAc() {
+        Network network = MultiAreaNetworkFactory.createTwoAreasWithTieLine();
+
+        // Create 3 times the same contingency
+        Contingency contingency1 = new Contingency("load3_outerLoopNames", new LoadContingency("load3"));
+        Contingency contingency2 = new Contingency("load3_no_outerLoopNames", new LoadContingency("load3"));
+        List<Contingency> contingencies = List.of(contingency1, contingency2);
+
+        // Default LF parameters
+        LoadFlowParameters parameters1 = new LoadFlowParameters().setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_GENERATION_P_MAX);
+        OpenLoadFlowParameters.create(parameters1)
+                .setAreaInterchangeControl(true)
+                .setOuterLoopNames(List.of("AreaInterchangeControl", "SecondaryVoltageControl", "VoltageMonitoring", "ReactiveLimits"));
+
+        LoadFlowParameters parameters2 = new LoadFlowParameters();
+        OpenLoadFlowParameters.create(parameters2)
+                .setAreaInterchangeControl(true);
+
+        // Add contingency LF parameters to contingencies
+        ContingencyLoadFlowParameters contLfParams1 = new ContingencyLoadFlowParameters()
+                .setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_LOAD)
+                .setOuterLoopNames(List.of("DistributedSlack", "SecondaryVoltageControl", "VoltageMonitoring", "ReactiveLimits"));
+        contingency1.addExtension(ContingencyLoadFlowParameters.class, contLfParams1);
+
+        ContingencyLoadFlowParameters contLfParams2 = new ContingencyLoadFlowParameters()
+                .setDistributedSlack(false)
+                .setAreaInterchangeControl(false);
+        contingency2.addExtension(ContingencyLoadFlowParameters.class, contLfParams2);
+
+        // Run security analysis
+        List<StateMonitor> monitors = createAllBranchesMonitors(network);
+        SecurityAnalysisParameters securityAnalysisParameters1 = new SecurityAnalysisParameters();
+        securityAnalysisParameters1.setLoadFlowParameters(parameters1);
+        SecurityAnalysisResult result1 = runSecurityAnalysis(network, contingencies, monitors, securityAnalysisParameters1);
+
+        SecurityAnalysisParameters securityAnalysisParameters2 = new SecurityAnalysisParameters();
+        securityAnalysisParameters2.setLoadFlowParameters(parameters2);
+        SecurityAnalysisResult result2 = runSecurityAnalysis(network, contingencies, monitors, securityAnalysisParameters2);
+
+        PreContingencyResult preContingencyResult1 = result1.getPreContingencyResult();
+        assertEquals(50, preContingencyResult1.getNetworkResult().getBranchResult("tl1").getP1(), LoadFlowAssert.DELTA_POWER);
+
+        PreContingencyResult preContingencyResult2 = result2.getPreContingencyResult();
+        assertEquals(50, preContingencyResult2.getNetworkResult().getBranchResult("tl1").getP1(), LoadFlowAssert.DELTA_POWER);
+
+        // Contingency parameters will always override initial parameters
+
+        // Base parameters with OuterLoopNames (aic) + contingency parameters with OuterLoopNames (slack) -> slack distribution applied
+        PostContingencyResult postContingencyResult1 = getPostContingencyResult(result1, "load3_outerLoopNames");
+        assertEquals(36.667, postContingencyResult1.getNetworkResult().getBranchResult("tl1").getP1(), LoadFlowAssert.DELTA_POWER);
+
+        // Base parameters with OuterLoopNames (aic) + contingency parameters without OuterLoopNames (no active power distrib) -> no active power distrib
+        PostContingencyResult postContingencyResult2 = getPostContingencyResult(result1, "load3_no_outerLoopNames");
+        assertEquals(30, postContingencyResult2.getNetworkResult().getBranchResult("tl1").getP1(), LoadFlowAssert.DELTA_POWER);
+
+        // Base parameters without OuterLoopNames (aic) + contingency parameters with OuterLoopNames (slack) -> slack distribution applied
+        PostContingencyResult postContingencyResult3 = getPostContingencyResult(result2, "load3_outerLoopNames");
+        assertEquals(36.667, postContingencyResult3.getNetworkResult().getBranchResult("tl1").getP1(), LoadFlowAssert.DELTA_POWER);
+
+        // Base parameters without OuterLoopNames (aic) + contingency parameters without OuterLoopNames (no active power distrib) -> no active power distrib
+        PostContingencyResult postContingencyResult4 = getPostContingencyResult(result2, "load3_no_outerLoopNames");
+        assertEquals(30, postContingencyResult4.getNetworkResult().getBranchResult("tl1").getP1(), LoadFlowAssert.DELTA_POWER);
+
+    }
+
+    @Test
+    void testContingencyParametersOuterLoopNamesDc() {
+        Network network = MultiAreaNetworkFactory.createTwoAreasWithTieLine();
+
+        // Create 3 times the same contingency
+        Contingency contingency1 = new Contingency("load3_outerLoopNames", new LoadContingency("load3"));
+        List<Contingency> contingencies = List.of(contingency1);
+
+        // Default LF parameters
+        LoadFlowParameters parameters1 = new LoadFlowParameters()
+                .setDc(true)
+                .setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_GENERATION_P_MAX);
+        OpenLoadFlowParameters.create(parameters1)
+                .setAreaInterchangeControl(true)
+                .setOuterLoopNames(List.of("AreaInterchangeControl"));
+
+        // Add contingency LF parameters to contingencies
+        ContingencyLoadFlowParameters contLfParams1 = new ContingencyLoadFlowParameters()
+                .setBalanceType(LoadFlowParameters.BalanceType.PROPORTIONAL_TO_LOAD)
+                .setAreaInterchangeControl(true)
+                .setOuterLoopNames(List.of());
+        contingency1.addExtension(ContingencyLoadFlowParameters.class, contLfParams1);
+
+        // Run security analysis
+        List<StateMonitor> monitors = createAllBranchesMonitors(network);
+        SecurityAnalysisParameters securityAnalysisParameters1 = new SecurityAnalysisParameters();
+        securityAnalysisParameters1.setLoadFlowParameters(parameters1);
+        SecurityAnalysisResult result1 = runSecurityAnalysis(network, contingencies, monitors, securityAnalysisParameters1);
+
+        // Pre contingency computation with aic
+        PreContingencyResult preContingencyResult1 = result1.getPreContingencyResult();
+        assertEquals(50, preContingencyResult1.getNetworkResult().getBranchResult("tl1").getP1(), LoadFlowAssert.DELTA_POWER);
+
+        // Base parameters with OuterLoopNames (aic) + contingency parameters with OuterLoopNames (slack) -> slack distribution applied
+        PostContingencyResult postContingencyResult1 = getPostContingencyResult(result1, "load3_outerLoopNames");
+        assertEquals(36.667, postContingencyResult1.getNetworkResult().getBranchResult("tl1").getP1(), LoadFlowAssert.DELTA_POWER);
+    }
+
+    @Test
+    void testDcSaNoViolationDetectedOnRemovedBranchOnOneSide() {
+        Network network = NodeBreakerNetworkFactory.createWith4Bars();
+
+        // add small limits on disabled lines to verify there is no violation detected
+        network.getLine("L3").getOrCreateSelectedOperationalLimitsGroup1().newCurrentLimits().setPermanentLimit(0.1).add();
+        network.getLine("L3").getOrCreateSelectedOperationalLimitsGroup2().newCurrentLimits().setPermanentLimit(0.1).add();
+        network.getLine("L4").getOrCreateSelectedOperationalLimitsGroup1().newCurrentLimits().setPermanentLimit(0.1).add();
+        network.getLine("L4").getOrCreateSelectedOperationalLimitsGroup2().newCurrentLimits().setPermanentLimit(0.1).add();
+
+        LoadFlowParameters lfParameters = new LoadFlowParameters();
+        lfParameters.setDc(true);
+        setSlackBusId(lfParameters, "VL1_0");
+        SecurityAnalysisParameters securityAnalysisParameters = new SecurityAnalysisParameters();
+        securityAnalysisParameters.setLoadFlowParameters(lfParameters);
+
+        // this contingency will disable L4 on side 1 and L5 on side 2
+        List<Contingency> contingencies = Stream.of("BBS3")
+                .map(id -> new Contingency(id, new BusbarSectionContingency(id)))
+                .collect(Collectors.toList());
+        List<StateMonitor> monitors = createAllBranchesMonitors(network);
+
+        SecurityAnalysisResult resultDefaultDcSa = runSecurityAnalysis(network, contingencies, monitors, securityAnalysisParameters);
+        PostContingencyResult postContingencyResult = getPostContingencyResult(resultDefaultDcSa, "BBS3");
+        assertEquals(200.0, postContingencyResult.getNetworkResult().getBranchResult("PS1").getP1(), DELTA_POWER);
+        assertEquals(-200.0, postContingencyResult.getNetworkResult().getBranchResult("PS1").getP2(), DELTA_POWER);
+        assertEquals(0, postContingencyResult.getLimitViolationsResult().getLimitViolations().size());
+        // in default dc mode, branch results with 0 flow are created for disabled branches on one side
+        assertEquals(5, postContingencyResult.getNetworkResult().getBranchResults().size());
+
+        // set dc sa mode
+        OpenSecurityAnalysisParameters openSecurityAnalysisParameters = new OpenSecurityAnalysisParameters();
+        openSecurityAnalysisParameters.setDcFastMode(true);
+        securityAnalysisParameters.addExtension(OpenSecurityAnalysisParameters.class, openSecurityAnalysisParameters);
+
+        SecurityAnalysisResult resultFastDcSa = runSecurityAnalysis(network, contingencies, monitors, securityAnalysisParameters);
+        postContingencyResult = getPostContingencyResult(resultFastDcSa, "BBS3");
+        assertEquals(200.0, postContingencyResult.getNetworkResult().getBranchResult("PS1").getP1(), DELTA_POWER);
+        assertEquals(-200.0, postContingencyResult.getNetworkResult().getBranchResult("PS1").getP2(), DELTA_POWER);
+        assertEquals(0, postContingencyResult.getLimitViolationsResult().getLimitViolations().size());
+        // in fast dc mode, no branch result is created for disabled branches on one side
+        assertEquals(1, postContingencyResult.getNetworkResult().getBranchResults().size());
+    }
+
+    @Test
+    void testHvdcRegularSeparation() {
+        Network network = HvdcNetworkFactory.createHvdcLinkedByTwoLinesAndSwitch(HvdcConverterStation.HvdcType.VSC);
+
+        // Move power to the right side
+        network.getHvdcLine("hvdc23").setConvertersMode(HvdcLine.ConvertersMode.SIDE_1_RECTIFIER_SIDE_2_INVERTER);
+
+        // Make each side of the network viable
+        Bus b4 = network.getBusBreakerView().getBus("b4");
+        VscConverterStation cs2 = network.getVscConverterStation("cs2");
+        VscConverterStation cs3 = network.getVscConverterStation("cs3");
+        Generator g4 = b4.getVoltageLevel().newGenerator()
+                .setId("g4")
+                .setVoltageRegulatorOn(false)
+                .setTargetQ(0)
+                .setMaxP(400)
+                .setMinP(5)
+                .setTargetP(10)
+                .setBus("b4")
+                .setConnectableBus("b4")
+                .add();
+
+        LoadFlowParameters p = new LoadFlowParameters()
+                .setHvdcAcEmulation(false);
+
+        p.addExtension(OpenLoadFlowParameters.class, new OpenLoadFlowParameters()
+                .setSlackDistributionFailureBehavior(OpenLoadFlowParameters.SlackDistributionFailureBehavior.FAIL));
+
+        SecurityAnalysisParameters sp = new SecurityAnalysisParameters();
+        sp.setLoadFlowParameters(p);
+        StateMonitor m = new StateMonitor(ContingencyContext.all(), Set.of("l12", "l34"), Collections.emptySet(), Collections.emptySet());
+        SecurityAnalysisResult sr = runSecurityAnalysis(network, List.of(new Contingency("l14", new LineContingency("l14"))), List.of(m), sp);
+
+        // Check that the HVDC link still works
+        assertEquals(-200, sr.getPostContingencyResults().get(0).getNetworkResult().getBranchResult("l12").getP2(), 1e-2);
+
+        // DC
+        p.setDc(true);
+        sr = runSecurityAnalysis(network, List.of(new Contingency("l14", new LineContingency("l14"))), List.of(m), sp);
+        assertEquals(-200, sr.getPostContingencyResults().get(0).getNetworkResult().getBranchResult("l12").getP2(), 1e-2);
+
+        // DC fast mode
+        sp.addExtension(OpenSecurityAnalysisParameters.class, new OpenSecurityAnalysisParameters().setDcFastMode(true));
+        sr = runSecurityAnalysis(network, List.of(new Contingency("l14", new LineContingency("l14"))), List.of(m), sp);
+        assertEquals(-200, sr.getPostContingencyResults().get(0).getNetworkResult().getBranchResult("l12").getP2(), 1e-2);
+
+        LoadFlowResult r = runLoadFlow(network, p);
+
+        assertTrue(r.isFullyConverged());
+
+        // Check the HVDC flow
+        assertActivePowerEquals(200, cs2.getTerminal());
+        assertActivePowerEquals(-195.600, cs3.getTerminal());
+        assertActivePowerEquals(-5, g4.getTerminal());
+
+        // separate the network
+        network.getLine("l14").disconnect();
+        p.setVoltageInitMode(LoadFlowParameters.VoltageInitMode.PREVIOUS_VALUES);
+        r = runLoadFlow(network, p);
+
+        assertTrue(r.isFullyConverged());
+        // Check the HVDC flow - still on
+        assertActivePowerEquals(200.000, cs2.getTerminal());
+        assertActivePowerEquals(-195.600, cs3.getTerminal());
+        assertActivePowerEquals(-104.400, g4.getTerminal());
+    }
+
+    @Test
+    void testTwoGeneratorsAtSameBus() {
+        Network network = FourBusNetworkFactory.createWithTwoGeneratorsAtBus2();
+        network.getBusBreakerView().getBus("b2")
+                .getGeneratorStream()
+                .forEach(g -> {
+                    g.setTargetV(1.5);
+                    g.newMinMaxReactiveLimits()
+                            .setMinQ(-6.5)
+                            .setMaxQ(6.5)
+                            .add();
+                    g.setTargetQ(1);
+
+                });
+
+        List<StateMonitor> monitors = List.of(new StateMonitor(ContingencyContext.all(), Set.of("l12", "l23"), Set.of("b2_vl"), Collections.emptySet()));
+        List<Contingency> contingencies = List.of(new Contingency("g5", new GeneratorContingency("g5")));
+        SecurityAnalysisResult result = runSecurityAnalysis(network, contingencies, monitors);
+        NetworkResult networkResult = result.getPostContingencyResults().get(0).getNetworkResult();
+        double v = networkResult.getBusResult("b2").getV();
+        double q = -networkResult.getBranchResult("l12").getQ2() - networkResult.getBranchResult("l23").getQ1();
+
+        // test that G2 has reached its reactive limits
+        assertEquals(1.294, v, DELTA_V);
+        assertEquals(-6.5, q, 1e-2); // use precision in sync with default OpenLoadFlowParameters
+
+        // The N case is the same
+        network.getGenerator("g5").disconnect();
+        runLoadFlow(network, new LoadFlowParameters());
+        assertVoltageEquals(1.294, network.getBusBreakerView().getBus("b2"));
+        assertReactivePowerEquals(-6.5, network.getGenerator("g2").getTerminal());
+
+    }
+
+    @Test
+    void testDoubleBus() {
+        Network network = DoubleBusNetworkFactory.create();
+
+        Generator g2 = network.getGenerator("g2");
+        g2.setTargetQ(1.23);
+
+        List<Contingency> contingencies = network.getVoltageLevel("vl1")
+                .getNodeBreakerView()
+                .getBusbarSectionStream()
+                .map(bbs -> Contingency.busbarSection(bbs.getId())).toList();
+
+        List<StateMonitor> monitors = List.of(new StateMonitor(ContingencyContext.all(), Set.of("twg2", "twg2_dangling"), Collections.emptySet(), Collections.emptySet()));
+
+        // The fact that a generators control voltage on a node that is disconneced should no longer trigger an exception
+        SecurityAnalysisResult result = assertDoesNotThrow(() -> runSecurityAnalysis(network, contingencies, monitors));
+
+        assertEquals(LoadFlowResult.ComponentResult.Status.CONVERGED, result.getPreContingencyResult().getStatus());
+
+        // g2 is PQ although supposed to be in voltage control - Q is determined by the sum of Q entering in the two transfomers connected to g2
+        assertTrue(g2.isVoltageRegulatorOn());
+        assertEquals(1.23,
+                result.getPreContingencyResult().getNetworkResult().getBranchResult("twg2").getQ2() + result.getPreContingencyResult().getNetworkResult().getBranchResult("twg2_dangling").getQ2(),
+                DELTA_POWER);
+
+        assertEquals(2, result.getPostContingencyResults().size());
+
+        result.getPostContingencyResults().forEach(r -> {
+            assertEquals(PostContingencyComputationStatus.CONVERGED, r.getStatus());
+            assertEquals(1.23,
+                    r.getNetworkResult().getBranchResult("twg2").getQ2() + r.getNetworkResult().getBranchResult("twg2_dangling").getQ2(),
+                    DELTA_POWER);
+        });
+
     }
 }
